[package]
name = "graph-chain-arweave"
version.workspace = true
edition.workspace = true

[build-dependencies]
tonic-build = { workspace = true }

[dependencies]
base64-url = "3.0.0"
graph = { path = "../../graph" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
sha2 = "0.10.8"

graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }

[dev-dependencies]
diesel = { workspace = true }
