[package]
name = "graph-chain-cosmos"
version.workspace = true
edition = "2018"

[build-dependencies]
tonic-build = { version = "0.7.1", features = ["prost"] }
graph-chain-common = { path = "../common" }

[dependencies]
graph = { path = "../../graph" }
prost = "0.11.5"
prost-types = "0.10.1"
serde = "1.0"
anyhow = "1.0"
semver = "1.0.16"

graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }
