[package]
name = "graph-chain-cosmos"
version.workspace = true
edition.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
graph-chain-common = { path = "../common" }

[dependencies]
graph = { path = "../../graph" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = "1.0"
anyhow = "1.0"
semver = "1.0.21"

graph-runtime-derive = { path = "../../runtime/derive" }
