[package]
name = "graph-chain-cosmos"
version.workspace = true
edition = "2018"

[build-dependencies]
tonic-build = { workspace = true }
graph-chain-common = { path = "../common" }

[dependencies]
graph = { path = "../../graph" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
anyhow = "1.0"
semver = "1.0.23"

graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }
