[package]
name = "graph-chain-ethereum"
version.workspace = true
edition.workspace = true

[dependencies]
envconfig = "0.10.0"
jsonrpc-core = "18.0.0"
graph = { path = "../../graph" }
serde = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = "1.0"
tiny-keccak = "1.5.0"
hex = "0.4.3"
semver = "1.0.23"

itertools = "0.13.0"

graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }

[dev-dependencies]
base64 = "0"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
tonic-build = { workspace = true }
