[package]
name = "graph-chain-ethereum"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
envconfig = { workspace = true }
jsonrpc-core = "18.0.0"
graph = { path = "../../graph" }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = "1.0"
tiny-keccak = "1.5.0"
hex = "0.4.3"
semver = "1.0.27"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }

# rust-web3 for compatibility testing - deserialize in parallel with alloy
web3 = { git = "https://github.com/graphprotocol/rust-web3", branch = "graph-patches-onto-0.18", default-features = false, features = ["signing"] }

itertools = "0.14.0"

graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }

[dev-dependencies]
base64 = "0"

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
