[package]
name = "graph-chain-near"
version.workspace = true
edition.workspace = true

[build-dependencies]
tonic-build = { workspace = true }

[dependencies]
graph = { path = "../../graph" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
anyhow = "1"

graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }

[dev-dependencies]
diesel = { workspace = true }
trigger-filters.path = "../../substreams/trigger-filters"
