[package]
name = "graph-chain-starknet"
version.workspace = true
edition.workspace = true

[build-dependencies]
tonic-build = { workspace = true }

[dependencies]
graph = { path = "../../graph" }
hex = { version = "0.4.3", features = ["serde"] }
prost = { workspace = true }
prost-types = { workspace = true }
serde = "1.0"
starknet-core = "0.6.0"

graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }
