[package]
name = "graph-chain-substreams"
version.workspace = true
edition.workspace = true

[build-dependencies]
tonic-build = { workspace = true }

[dependencies]
graph = { path = "../../graph" }
graph-runtime-wasm = { path = "../../runtime/wasm" }
lazy_static = "1.5.0"
serde = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = "1.0"
hex = "0.4.3"
semver = "1.0.23"
base64 = "0.22.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
