[package]
name = "graph-chain-tendermint"
version = "0.25.1"
edition = "2018"

[build-dependencies]
tonic-build = "0.5.1"

[dependencies]
graph = { path = "../../graph" }
mockall = "0.9.1"
prost = "0.8.0"
prost-types = "0.8.0"
serde = "1.0"
anyhow = "1.0"
semver = "1.0.3"

graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }

[dev-dependencies]
graph-core = { path = "../../core" }
pretty_assertions = "0.7.2"
test-store = { path = "../../store/test-store" }
