[package]
name = "graphman"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
diesel = { workspace = true }
graph = { workspace = true }
graph-store-postgres = { workspace = true }
graphman-store = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
