[package]
name = "thegraph-datasource-ethereum"
version = "0.1.0"

[dependencies]
ethereum-types = "0.3"
ethabi = "5.1.1"
futures = "0.1.21"
jsonrpc-core = "8.0.1"
serde_json = "1.0"
thegraph = { path = "../../thegraph" }
tokio-core = "0.1.6"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
