[package]
name = "graph-datasource-ethereum"
version = "0.16.1"
edition = "2018"

[dependencies]
bs58 = "0.3"
failure = "0.1.6"
ether-converter = "0.1"
futures = "0.1.21"
jsonrpc-core = "13.2.0"
graph = { path = "../../graph" }
mock = { package = "graph-mock", path = "../../mock" }
lazy_static = "1.2.0"
hex-literal = "0.2"
serde = "1.0"
ethjson = { git = "http://github.com/paritytech/parity-ethereum.git", branch = "master" }
