[package]
name = "graph_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = "1.0"
proc-macro2 = "1.0.85"
heck = "0.5"

[dev-dependencies]
proc-macro-utils = "0.10.0"
