[package]
name = "graph-runtime-test"
version.workspace = true
edition.workspace = true

[dependencies]
semver = "1.0"
wasmtime.workspace = true
graph = { path = "../../graph" }
graph-chain-ethereum = { path = "../../chain/ethereum" }
graph-core = { path = "../../core" }
graph-runtime-derive = { path = "../derive" }
graph-runtime-wasm = { path = "../wasm" }
rand = "0.8.5"


[dev-dependencies]
test-store = { path = "../../store/test-store" }
