[package]
name = "graph-runtime-test"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
semver = "1.0"
wasmtime.workspace = true
graph = { path = "../../graph" }
graph-chain-ethereum = { path = "../../chain/ethereum" }
graph-runtime-wasm = { path = "../wasm" }
rand.workspace = true


[dev-dependencies]
test-store = { path = "../../store/test-store" }
